--- a/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-base/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,13 @@
-<p>pokemon-list works!</p>
+<table>
+    <thead>
+        <th>Name</th>
+        <th>Index</th>
+    </thead>
+    <tbody>
+      <!-- <app-pokemon-detail 
+        *ngFor="let pokemon of pokemons"
+        [detail]="pokemon"
+        (remove)="handleRemove($event)"><h1 #contentRef>{{ pokemon.name }}</h1>
+      </app-pokemon-detail>   -->
+    </tbody>
+  </table>
