--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
 <!-- <app-pokemon-list></app-pokemon-list> -->
-<app-pokemon-form></app-pokemon-form>
+<!-- <app-pokemon-form></app-pokemon-form> -->
+
+<div>
+    <a
+        *ngFor="let item of nav" 
+        [routerLink]="item.link"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: item.exact }"
+    >
+        {{ item.name }}
+    </a>
+</div>
+
+<router-outlet></router-outlet>
