update pokemons app

--- a/src/app/pokemon-base/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokemon-base/pokemon-detail/pokemon-detail.component.html
@@ -9,5 +9,5 @@
     </td>
     <td class="pokemon-td">
         <button (click)="onRemove()">Remove</button>
+        <button [routerLink]="['/pokemon', detail.id]">Details</button>
     </td>
-    <!-- <button [routerLink]="['/pokemon', detail.id]">Details</button> -->
