--- a/src/app/pokemon-base/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-base/pokemon-form/pokemon-form.component.html
@@ -41,7 +41,7 @@
   </label>
 
   <button type="submit" [disabled]="!form.valid">Save</button>
-  <!-- <button type="button" (click)="back()">Go Back</button> -->
+  <button type="button" (click)="back()">Go Back</button>
 </form>
 <div>
   MODEL: {{ pokemon | json }}
