--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin : 0;
+    padding : 0;
+    box-sizing: border-box;
+}
+
+ul, li { list-style-type: none;}
+
+a { text-decoration: none;}
+.active { color : red}
