--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -7,4 +7,5 @@
     <div>
       <p>You have pressed Inc button : {{incCount$ | async }} times</p>
       <p>You have pressed Dec button : {{decCount$ | async }} times</p>
+      <button (click)="multiply()">Multiply By {{ multiplier }}</button>
     </div>
